Package_Tools/include-C/llvm-c-20/llvm-c/in_arbeit/pas/lto.pas

unit lto;

interface

uses
  fp_llvm;

{$IFDEF FPC}
{$PACKRECORDS C}
{$ENDIF}


{===-- llvm-c/lto.h - LTO Public C Interface ---------------------*- C -*-===*\
|*                                                                            *|
|* Part of the LLVM Project, under the Apache License v2.0 with LLVM          *|
|* Exceptions.                                                                *|
|* See https://llvm.org/LICENSE.txt for license information.                  *|
|* SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception                    *|
|*                                                                            *|
|*===----------------------------------------------------------------------===*|
|*                                                                            *|
|* This header provides public interface to an abstract link time optimization*|
|* library.  LLVM provides an implementation of this interface for use with   *|
|* llvm bitcode files.                                                        *|
|*                                                                            *|
\*===----------------------------------------------------------------------=== }
{$ifndef LLVM_C_LTO_H}
{$define LLVM_C_LTO_H}
{$include "llvm-c/ExternC.h"}
{$include <stddef.h>}
{$include <sys/types.h>}
{$ifndef __cplusplus}
{$if !defined(_MSC_VER)}
{$include <stdbool.h>}
type
  Plto_bool_t = ^Tlto_bool_t;
  Tlto_bool_t = Tbool;
{$else}
{ MSVC in particular does not have anything like _Bool or bool in C, but we can
   at least make sure the type is the same size.  The implementation side will
   use C++ bool.  }
type
  Plto_bool_t = ^Tlto_bool_t;
  Tlto_bool_t = byte;
{$endif}
{$else}
type
  Plto_bool_t = ^Tlto_bool_t;
  Tlto_bool_t = Tbool;
{$endif}
{*
 * @defgroup LLVMCLTO LTO
 * @ingroup LLVMC
 *
 * @
  }

const
  LTO_API_VERSION = 29;  
{*
 * \since prior to LTO_API_VERSION=3
  }
{ log2 of alignment  }
type
  Plto_symbol_attributes = ^Tlto_symbol_attributes;
  Tlto_symbol_attributes =  Longint;
  Const
    LTO_SYMBOL_ALIGNMENT_MASK = $0000001F;
    LTO_SYMBOL_PERMISSIONS_MASK = $000000E0;
    LTO_SYMBOL_PERMISSIONS_CODE = $000000A0;
    LTO_SYMBOL_PERMISSIONS_DATA = $000000C0;
    LTO_SYMBOL_PERMISSIONS_RODATA = $00000080;
    LTO_SYMBOL_DEFINITION_MASK = $00000700;
    LTO_SYMBOL_DEFINITION_REGULAR = $00000100;
    LTO_SYMBOL_DEFINITION_TENTATIVE = $00000200;
    LTO_SYMBOL_DEFINITION_WEAK = $00000300;
    LTO_SYMBOL_DEFINITION_UNDEFINED = $00000400;
    LTO_SYMBOL_DEFINITION_WEAKUNDEF = $00000500;
    LTO_SYMBOL_SCOPE_MASK = $00003800;
    LTO_SYMBOL_SCOPE_INTERNAL = $00000800;
    LTO_SYMBOL_SCOPE_HIDDEN = $00001000;
    LTO_SYMBOL_SCOPE_PROTECTED = $00002000;
    LTO_SYMBOL_SCOPE_DEFAULT = $00001800;
    LTO_SYMBOL_SCOPE_DEFAULT_CAN_BE_HIDDEN = $00002800;
    LTO_SYMBOL_COMDAT = $00004000;
    LTO_SYMBOL_ALIAS = $00008000;
;
{*
 * \since prior to LTO_API_VERSION=3
  }
type
  Plto_debug_model = ^Tlto_debug_model;
  Tlto_debug_model =  Longint;
  Const
    LTO_DEBUG_MODEL_NONE = 0;
    LTO_DEBUG_MODEL_DWARF = 1;
;
{*
 * \since prior to LTO_API_VERSION=3
  }
type
  Plto_codegen_model = ^Tlto_codegen_model;
  Tlto_codegen_model =  Longint;
  Const
    LTO_CODEGEN_PIC_MODEL_STATIC = 0;
    LTO_CODEGEN_PIC_MODEL_DYNAMIC = 1;
    LTO_CODEGEN_PIC_MODEL_DYNAMIC_NO_PIC = 2;
    LTO_CODEGEN_PIC_MODEL_DEFAULT = 3;
;
{* opaque reference to a loaded object module  }
type
  Plto_module_t = ^Tlto_module_t;
  Tlto_module_t = PLLVMOpaqueLTOModule;
{* opaque reference to a code generator  }

  Plto_code_gen_t = ^Tlto_code_gen_t;
  Tlto_code_gen_t = PLLVMOpaqueLTOCodeGenerator;
{* opaque reference to a thin code generator  }

  Pthinlto_code_gen_t = ^Tthinlto_code_gen_t;
  Tthinlto_code_gen_t = PLLVMOpaqueThinLTOCodeGenerator;
{*
 * Returns a printable string.
 *
 * \since prior to LTO_API_VERSION=3
  }

function lto_get_version:Pchar;cdecl;external libllvm;
{*
 * Returns the last error string or NULL if last operation was successful.
 *
 * \since prior to LTO_API_VERSION=3
  }
function lto_get_error_message:Pchar;cdecl;external libllvm;
{*
 * Checks if a file is a loadable object file.
 *
 * \since prior to LTO_API_VERSION=3
  }
function lto_module_is_object_file(path:Pchar):Tlto_bool_t;cdecl;external libllvm;
{*
 * Checks if a file is a loadable object compiled for requested target.
 *
 * \since prior to LTO_API_VERSION=3
  }
function lto_module_is_object_file_for_target(path:Pchar; target_triple_prefix:Pchar):Tlto_bool_t;cdecl;external libllvm;
{*
 * Return true if \p Buffer contains a bitcode file with ObjC code (category
 * or class) in it.
 *
 * \since LTO_API_VERSION=20
  }
function lto_module_has_objc_category(mem:pointer; length:Tsize_t):Tlto_bool_t;cdecl;external libllvm;
{*
 * Checks if a buffer is a loadable object file.
 *
 * \since prior to LTO_API_VERSION=3
  }
function lto_module_is_object_file_in_memory(mem:pointer; length:Tsize_t):Tlto_bool_t;cdecl;external libllvm;
{*
 * Checks if a buffer is a loadable object compiled for requested target.
 *
 * \since prior to LTO_API_VERSION=3
  }
function lto_module_is_object_file_in_memory_for_target(mem:pointer; length:Tsize_t; target_triple_prefix:Pchar):Tlto_bool_t;cdecl;external libllvm;
{*
 * Loads an object file from disk.
 * Returns NULL on error (check lto_get_error_message() for details).
 *
 * \since prior to LTO_API_VERSION=3
  }
function lto_module_create(path:Pchar):Tlto_module_t;cdecl;external libllvm;
{*
 * Loads an object file from memory.
 * Returns NULL on error (check lto_get_error_message() for details).
 *
 * \since prior to LTO_API_VERSION=3
  }
function lto_module_create_from_memory(mem:pointer; length:Tsize_t):Tlto_module_t;cdecl;external libllvm;
{*
 * Loads an object file from memory with an extra path argument.
 * Returns NULL on error (check lto_get_error_message() for details).
 *
 * \since LTO_API_VERSION=9
  }
function lto_module_create_from_memory_with_path(mem:pointer; length:Tsize_t; path:Pchar):Tlto_module_t;cdecl;external libllvm;
{*
 * Loads an object file in its own context.
 *
 * Loads an object file in its own LLVMContext.  This function call is
 * thread-safe.  However, modules created this way should not be merged into an
 * lto_code_gen_t using \a lto_codegen_add_module().
 *
 * Returns NULL on error (check lto_get_error_message() for details).
 *
 * \since LTO_API_VERSION=11
  }
function lto_module_create_in_local_context(mem:pointer; length:Tsize_t; path:Pchar):Tlto_module_t;cdecl;external libllvm;
{*
 * Loads an object file in the codegen context.
 *
 * Loads an object file into the same context as \c cg.  The module is safe to
 * add using \a lto_codegen_add_module().
 *
 * Returns NULL on error (check lto_get_error_message() for details).
 *
 * \since LTO_API_VERSION=11
  }
function lto_module_create_in_codegen_context(mem:pointer; length:Tsize_t; path:Pchar; cg:Tlto_code_gen_t):Tlto_module_t;cdecl;external libllvm;
{*
 * Loads an object file from disk. The seek point of fd is not preserved.
 * Returns NULL on error (check lto_get_error_message() for details).
 *
 * \since LTO_API_VERSION=5
  }
function lto_module_create_from_fd(fd:longint; path:Pchar; file_size:Tsize_t):Tlto_module_t;cdecl;external libllvm;
{*
 * Loads an object file from disk. The seek point of fd is not preserved.
 * Returns NULL on error (check lto_get_error_message() for details).
 *
 * \since LTO_API_VERSION=5
  }
function lto_module_create_from_fd_at_offset(fd:longint; path:Pchar; file_size:Tsize_t; map_size:Tsize_t; offset:Toff_t):Tlto_module_t;cdecl;external libllvm;
{*
 * Frees all memory internally allocated by the module.
 * Upon return the lto_module_t is no longer valid.
 *
 * \since prior to LTO_API_VERSION=3
  }
procedure lto_module_dispose(mod:Tlto_module_t);cdecl;external libllvm;
{*
 * Returns triple string which the object module was compiled under.
 *
 * \since prior to LTO_API_VERSION=3
  }
function lto_module_get_target_triple(mod:Tlto_module_t):Pchar;cdecl;external libllvm;
{*
 * Sets triple string with which the object will be codegened.
 *
 * \since LTO_API_VERSION=4
  }
procedure lto_module_set_target_triple(mod:Tlto_module_t; triple:Pchar);cdecl;external libllvm;
{*
 * Returns the number of symbols in the object module.
 *
 * \since prior to LTO_API_VERSION=3
  }
function lto_module_get_num_symbols(mod:Tlto_module_t):dword;cdecl;external libllvm;
{*
 * Returns the name of the ith symbol in the object module.
 *
 * \since prior to LTO_API_VERSION=3
  }
function lto_module_get_symbol_name(mod:Tlto_module_t; index:dword):Pchar;cdecl;external libllvm;
{*
 * Returns the attributes of the ith symbol in the object module.
 *
 * \since prior to LTO_API_VERSION=3
  }
function lto_module_get_symbol_attribute(mod:Tlto_module_t; index:dword):Tlto_symbol_attributes;cdecl;external libllvm;
{*
 * Returns the module's linker options.
 *
 * The linker options may consist of multiple flags. It is the linker's
 * responsibility to split the flags using a platform-specific mechanism.
 *
 * \since LTO_API_VERSION=16
  }
function lto_module_get_linkeropts(mod:Tlto_module_t):Pchar;cdecl;external libllvm;
{*
 * If targeting mach-o on darwin, this function gets the CPU type and subtype
 * that will end up being encoded in the mach-o header. These are the values
 * that can be found in mach/machine.h.
 *
 * \p out_cputype and \p out_cpusubtype must be non-NULL.
 *
 * Returns true on error (check lto_get_error_message() for details).
 *
 * \since LTO_API_VERSION=27
  }
function lto_module_get_macho_cputype(mod:Tlto_module_t; out_cputype:Pdword; out_cpusubtype:Pdword):Tlto_bool_t;cdecl;external libllvm;
{*
 * This function can be used by the linker to check if a given module has
 * any constructor or destructor functions.
 *
 * Returns true if the module has either the @llvm.global_ctors or the
 * @llvm.global_dtors symbol. Otherwise returns false.
 *
 * \since LTO_API_VERSION=29
  }
function lto_module_has_ctor_dtor(mod:Tlto_module_t):Tlto_bool_t;cdecl;external libllvm;
{*
 * Diagnostic severity.
 *
 * \since LTO_API_VERSION=7
  }
{ Added in LTO_API_VERSION=10. }
type
  Plto_codegen_diagnostic_severity_t = ^Tlto_codegen_diagnostic_severity_t;
  Tlto_codegen_diagnostic_severity_t =  Longint;
  Const
    LTO_DS_ERROR = 0;
    LTO_DS_WARNING = 1;
    LTO_DS_REMARK = 3;
    LTO_DS_NOTE = 2;
;
{*
 * Diagnostic handler type.
 * \p severity defines the severity.
 * \p diag is the actual diagnostic.
 * The diagnostic is not prefixed by any of severity keyword, e.g., 'error: '.
 * \p ctxt is used to pass the context set with the diagnostic handler.
 *
 * \since LTO_API_VERSION=7
  }
type

  Tlto_diagnostic_handler_t = procedure (severity:Tlto_codegen_diagnostic_severity_t; diag:Pchar; ctxt:pointer);cdecl;
{*
 * Set a diagnostic handler and the related context (void *).
 * This is more general than lto_get_error_message, as the diagnostic handler
 * can be called at anytime within lto.
 *
 * \since LTO_API_VERSION=7
  }
